@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Flexc++ V 2.06.03</title>
+<title>Flexc++ V 2.06.04</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -17,7 +17,7 @@
 </head>
 <body>
 <hr/>
-<h1 id="title">Flexc++ V 2.06.03</h1>
+<h1 id="title">Flexc++ V 2.06.04</h1>
 <h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
 <h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">2008-2018</h2>
@@ -39,6 +39,8 @@ by its tag or download the matching <code >.zip</code> or <code >.tar.gz</code> 
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.06.04">2.06.04</a>
+Mar 09, 2018;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.06.03">2.06.03</a>
 Mar 08, 2018;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.06.02">2.06.02</a>
@@ -46,9 +48,7 @@ May 18, 2017;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.06.01">2.06.01</a>
 Mar 04, 2017;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.06.00">2.06.00</a>
-Mar 01, 2017;
-        <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.05.00">2.05.00</a>
-Apr 13, 2016.
+Mar 01, 2017.
         </ul>
     
 <p>
