@@ -16,7 +16,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">flexc++api(3)</h1>
-<h2 id="author">flexc++ API<br/>(flexc++.2.06.03.tar.gz)</h2>
+<h2 id="author">flexc++ API<br/>(flexc++.2.06.04.tar.gz)</h2>
 <h2 id="date">2008-2018</h2>
 
 
@@ -874,7 +874,7 @@ object.
             interface. 
         <li> <em >Scannerbase.h</em>: the header file containing the interface of the 
             scanner class's base class.
-        <li> <em >Scanner.hh</em>: the internal header file that is meant to be included
+        <li> <em >Scanner.ih</em>: the internal header file that is meant to be included
             by the scanner class's source files (e.g., it is included by
             <em >lex.cc</em>, see the next item's file), and that should contain all
             declarations required for compiling the scanner class's sources.
