@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title> Flexc++ (Version 2.06.03) User Guide </title>
+<title> Flexc++ (Version 2.06.04) User Guide </title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
@@ -171,7 +171,7 @@ It is an error if this directive is used and an already
             the generated code. 
 <p>
 <li> <strong >%filenames</strong> <code >= "basename"</code> <br/>
-           Defines the basename of the <code >Scanner.h, Scanner.hh,</code> and
+           Defines the basename of the <code >Scanner.h, Scanner.ih,</code> and
             <code >Scannerbase.h</code> files. E.g., when using the directive
                 <pre>
 
@@ -180,7 +180,7 @@ It is an error if this directive is used and an already
 </pre>
 
            the names of the generated files are, respectively, <code >scanner.h,
-            scanner.hh,</code> and <code >scannerbase.h</code>.  Corresponding command-line
+            scanner.ih,</code> and <code >scannerbase.h</code>.  Corresponding command-line
             option: <code >--filenames</code>. The name of the source file (by default
             <code >lex.cc</code>) is controlled by the <code >%lex-source</code> directive.
 <p>
