@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title> Flexc++ (Version 2.06.03) User Guide </title>
+<title> Flexc++ (Version 2.06.04) User Guide </title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
@@ -1485,7 +1485,7 @@ rewritten and declares data members used by the scanner.
 <li><code >Scanner.h.</code> This file represents the generated scanner's interface. It
 inherits from <code >ScannerBase</code> and is written only if not existing. 
 <p>
-<li><code >Scanner.hh.</code> This file represents the generated scanner's <em >internal
+<li><code >Scanner.ih.</code> This file represents the generated scanner's <em >internal
 header file</em>. The internal header file is part of a design philosophy
 according to which all source files belonging to a class should merely include
 the internal header file, which declares all headers and other elements that
